Refactor counter components to utilize Angular 19 features and signals

--- a/Day2/use-ng19-features/src/app/app.component.html
+++ b/Day2/use-ng19-features/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h2>My App -- Current value = {{count}}</h2>
+<h2>My App -- Current value = {{count()}}</h2>
 
 <app-counter-test></app-counter-test>
 <hr>
