--- a/Day2/use-ng19-features/src/app/components/counter-with-signal/counter-with-signal.component.html
+++ b/Day2/use-ng19-features/src/app/components/counter-with-signal/counter-with-signal.component.html
@@ -1,5 +1,5 @@
 <div>
     <button (click)="increment()">+</button>
-    <!-- <span>{{count$ | async}}</span> -->
+    <span>{{count()}}</span>
     <button (click)="decrement()">-</button>
 </div>
