--- a/Day2/use-ng19-features/src/app/pages/counter-test/counter-test.component.html
+++ b/Day2/use-ng19-features/src/app/pages/counter-test/counter-test.component.html
@@ -1,12 +1,12 @@
 <button (click)="changeDisplay()">Show/Hide</button>
-<app-counter></app-counter> 
+<app-counter-with-signal></app-counter-with-signal> 
 
 @if(displayAllCounter) { 
-    <app-counter></app-counter>
-    <app-counter></app-counter>
-    <app-counter></app-counter>
-    <app-counter></app-counter>
-    <app-counter></app-counter>
-    <app-counter></app-counter>
-    <app-counter></app-counter> 
+    <app-counter-with-signal></app-counter-with-signal>
+    <app-counter-with-signal></app-counter-with-signal>
+    <app-counter-with-signal></app-counter-with-signal>
+    <app-counter-with-signal></app-counter-with-signal>
+    <app-counter-with-signal></app-counter-with-signal>
+    <app-counter-with-signal></app-counter-with-signal>
+    <app-counter-with-signal></app-counter-with-signal> 
 }
