Refactor counter component to use CounterService for state management and add isEven computed property

--- a/Day2/use-ng19-features/src/app/components/counter-with-signal/counter-with-signal.component.html
+++ b/Day2/use-ng19-features/src/app/components/counter-with-signal/counter-with-signal.component.html
@@ -1,5 +1,5 @@
 <div>
-    <button (click)="increment()">+</button>
-    <span>{{count()}} * 2 {{countMul2()}}</span>
-    <button (click)="decrement()">-</button>
+    <button (click)="counterService.increment()">+</button>
+    <span>{{counterService.counterChange()}} * 2 {{countMul2()}} -- isEven = {{counterService.isEven()}}</span>
+    <button (click)="counterService.decrement()">-</button>
 </div>
